[gd_scene load_steps=5 format=3 uid="uid://dm6f7gyy0bvj2"]

[ext_resource type="Script" path="res://src/ui/GameOverScreen3DText.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_title"]
albedo_color = Color(1, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(1, 0.1, 0.1, 1)
emission_energy_multiplier = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_subtitle"]
albedo_color = Color(1, 0.85, 0.3, 1)
emission_enabled = true
emission = Color(1, 0.7, 0.1, 1)
emission_energy_multiplier = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hint"]
albedo_color = Color(0.7, 0.7, 0.7, 1)
emission_enabled = true
emission = Color(0.5, 0.5, 0.5, 1)
emission_energy_multiplier = 0.3

[sub_resource type="TextMesh" id="TextMesh_title"]
text = "GAME OVER"
font_size = 96
depth = 0.2

[sub_resource type="TextMesh" id="TextMesh_subtitle"]
text = "HIGH SCORES"
font_size = 48
depth = 0.2

[sub_resource type="TextMesh" id="TextMesh_hint"]
text = "CLICK TO RESTART"
font_size = 24
depth = 0.1

[node name="GameOverScreen3DText" type="Node3D"]
script = ExtResource("1_script")

[node name="TitleMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
cast_shadow = 0
gi_mode = 0
material_override = SubResource("StandardMaterial3D_title")
mesh = SubResource("TextMesh_title")

[node name="SubtitleMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
cast_shadow = 0
gi_mode = 0
material_override = SubResource("StandardMaterial3D_subtitle")
mesh = SubResource("TextMesh_subtitle")

[node name="ScoreContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="HintMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
cast_shadow = 0
gi_mode = 0
material_override = SubResource("StandardMaterial3D_hint")
mesh = SubResource("TextMesh_hint")
